--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ me_term_project/vgg16.h5
 me_term_project/archive.zip
 me_term_project/best_model.h5
 me_term_project/best_model.h5
+me_term_project/NEU_separated
+me_term_project/NEU_separated_preproc
