added novelty detection class

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ me_term_project/best_model.h5
 me_term_project/best_model.h5
 me_term_project/NEU_separated
 me_term_project/NEU_separated_preproc
+me_term_project/NEU_mixed_batch_40
